// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBColumnConfiguration component should render all columns 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--reviewed"
    title="This marks a reviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: 3D structures 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Absorption 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="18"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="18"
      />
    </section>
    <button
      aria-controls="19"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="19"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Activity Regulation 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Allergenic Properties 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Alternative Products 1`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <hr />
  <h3
    id="isoID1"
  >
    isoID1
  </h3>
  <div
    class="info-list info-list--columns info-list--compact"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        syn value
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        value1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Alternative sequence 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Biotechnological Use 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Catalytic Activity 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <strong>
      1.2.4.5
    </strong>
     some reaction
    <button
      aria-controls="20"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="20"
    />
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     direction 
    <button
      aria-controls="21"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        Imported
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="21"
    />
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Cofactor 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <button
        aria-controls="22"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="22"
      />
    </span>
    <section
      class="text-block"
    >
      value2
      <button
        aria-controls="23"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="23"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: DNA-binding region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Date Created 1`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Date Modified 1`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Date Sequence Modified 1`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Developmental stage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Disease Involvement 1`] = `
<DocumentFragment>
  <h3>
    DiseaseEntry Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <button
      aria-controls="35"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="35"
    />
  </span>
  <div
    class="info-list"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            value2
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Description
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        some description
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          See also
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <a
          class="external-link"
          href="https://www.omim.org/entry/3124"
          rel="noopener"
          target="_blank"
        >
          3124
          <test-file-stub
            width="12.5"
          />
        </a>
          
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Disruption Phenotype 1`] = `
<DocumentFragment>
  <h5>
    Isoform 4
  </h5>
  <section
    class="text-block"
  >
    value
    <button
      aria-controls="34"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="34"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Domain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: EC Number 1`] = `
<DocumentFragment>
  1.2.3.4 
  <button
    aria-controls="24"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="24"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Entry 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Entry Name 1`] = `
<DocumentFragment>
  <span>
    uniprot_id
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Fragment 1`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Function 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene Names 1`] = `
<DocumentFragment>
  <div
    class="info-list info-list--no-title"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        some Gene 
        <button
          aria-controls="7"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="7"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        some Syn 
        <button
          aria-controls="8"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="8"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          ORF names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        some orf 
        <button
          aria-controls="9"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 publication
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="9"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Ordered locus names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        some locus 
        <button
          aria-controls="10"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="10"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene Ontology - Biological Process 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene Ontology - Cellular Component 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene Ontology - Molecular Function 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene Ontology 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene Ontology IDs 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene names (ORF) 1`] = `
<DocumentFragment>
  some orf 
  <button
    aria-controls="12"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      1 publication
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="12"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene names (Ordered locus) 1`] = `
<DocumentFragment>
  some locus 
  <button
    aria-controls="11"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="11"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene names (Primary) 1`] = `
<DocumentFragment>
  <div>
    some Gene
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Gene names (Synonyms) 1`] = `
<DocumentFragment>
  some Syn 
  <button
    aria-controls="13"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="13"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Induction 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Interacts with 1`] = `
<DocumentFragment>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Keyword IDs 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #KW-11111
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Keywords 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #keyword value
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Kinetics 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <button
          aria-controls="25"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="25"
        />
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="26"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="26"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Length 1`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Lineage 1`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Mapped PubMed ID 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Mass 1`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Mass Spectrometry 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      isoform 1
    </h3>
    Molecular mass is 2.1 Da. Determined by LSI. note value
    <button
      aria-controls="14"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="14"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Miscellaneous [CC] 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Nucleotide-binding region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Organism 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    scientific name (common name)  (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Organism 2`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606 
  </a>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    rel="noopener"
    target="_blank"
  >
    NCBI
    <test-file-stub
      width="12.5"
    />
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Other binding site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Other domain of interest 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Other site of interest 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Pathway 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Pharmaceutical Use 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Polymorphysm 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Post-Translational Modification 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Post-translationally modified residue 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Protein Families 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Protein existence 1`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Protein names 1`] = `
<DocumentFragment>
  <div
    class="info-list info-list--no-title"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Recommended name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        rec full Name 
        <button
          aria-controls="0"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="0"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          EC number
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        1.2.3.4 
        <button
          aria-controls="1"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="1"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Short names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        recommended short name 
        <button
          aria-controls="2"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="2"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Alternative names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            a full alt Name 
            <button
              aria-controls="3"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="3"
            />
             (short alt name1 
            <button
              aria-controls="4"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="4"
            />
            ) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Cleaved into 1 chains
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            containsrec full Name (containsrecommended short name)  
            <strong>
              Alternative names: 
            </strong>
            containsa full alt Name (containsshort alt name1) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Submission names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            sub full Name 
            <button
              aria-controls="5"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="5"
            />
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Biotech name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        biotech 
        <button
          aria-controls="6"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="6"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          CD Antigen Name
        </h5>
      </div>
      <div
        class="info-list__content"
      />
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          INN Name
        </h5>
      </div>
      <div
        class="info-list__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Proteomes 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: PubMed ID 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/6789"
      >
        6789
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/123415"
      >
        123415
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        2 more items
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: RNA Editing 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at positions 
      <span>
        rna position 
        <button
          aria-controls="15"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="15"
        />
      </span>
    </div>
    <div>
      <span>
        value 
        <button
          aria-controls="16"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="16"
        />
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Redox Potential 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="28"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="28"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Score 1`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Sequence 1`] = `
<DocumentFragment>
  <section
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <div
        class="sequence__sequence"
      >
        <span
          class="sequence__sequence__chunk"
        >
          <svg
            height="30"
            width="100"
          >
            <text
              class="sequence__sequence__chunk__counter"
              x="100"
              y="10"
            >
              10
            </text>
            <text
              class="sequence__sequence__chunk__sequence"
              x="0"
              y="20"
            >
              SAPSQDFMRF
            </text>
          </svg>
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Sequence Caution 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <test-file-stub
        width="12.5"
      />
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="17"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="17"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Sequence Caution 2`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <test-file-stub
        width="12.5"
      />
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="30"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="30"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Sequence Similarities 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Sequence Version 1`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Subcellular Location 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div>
      <strong>
        location value
      </strong>
       
      <button
        aria-controls="31"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="31"
      />
      : topology value 
      <button
        aria-controls="32"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="32"
      />
    </div>
    <section
      class="text-block"
    >
      value
      <button
        aria-controls="33"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="33"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Subunit structure 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Temperature Dependence 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="29"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="29"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Tissue Specificity 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Toxic Dose 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Uncertainty in sequence 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: Variants 1`] = `
<DocumentFragment>
  <div
    class="loader-container"
  >
    <test-file-stub
      classname="loader"
      height="100"
      width="100"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Version 1`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: Virus hosts 1`] = `
<DocumentFragment>
  <p>
    <a
      href="/taxonomy/9606"
    >
      scientific name (common name)  (synonyms 1)
    </a>
  </p>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: active site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: calcium-binding region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: chain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: coiled-coil region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: compositionally biased region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: cross-link 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: disulfide bond 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: glycosylation site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: helix 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: initiator methionine 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: intramembrane region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: lipid moiety-binding region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: metal ion-binding site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: mutagenesis site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: non-consecutive residues 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: non-standard amino acid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: non-terminal residue 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: pH Dependence 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="27"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="27"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render all columns: peptide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: propeptide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: region of interest 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: repeat 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: sequence conflict 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: short sequence motif 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: signal peptide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: strand 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: topological domain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: transit peptide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: transmembrane region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: turn 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render all columns: zinc finger region 1`] = `<DocumentFragment />`;
